dp/css/common.css
@charset "utf-8";
/*
* @Author: Diego Pereira Espinoza
* @Email: orcux86@gmail.com
* @Date: December 02, 2011
*/
/* CSS Document */

#header_container, #nav_container, #title, #pre_content, #counter, #post_content, #below_content, #sidebar_container, #selfpromotionOverlay, #extraDiv1, #extraDiv2, #extraDiv3, #extraDiv4, #extraDiv5, #extraDiv6 {
    display: none;
}
#selfpromotionOverlay {
    display: block;
}
#selfpromotionOverlay .btn {
    /*width: 908px;*/
}
#hpb_cssonly {
    padding-top: 230px;
}
@media (min-width: 184px) {
#hpb_cssonly {
    padding-top: 209px;
}
}
@media (min-width: 222px) {
#hpb_cssonly {
    padding-top: 188px;
}
}
@media (min-width: 270px) {
#hpb_cssonly {
    padding-top: 167px;
}
}
@media (min-width: 275px) {
#hpb_cssonly {
    padding-top: 146px;
}
}
@media (min-width: 312px) {
#hpb_cssonly {
    padding-top: 125px;
}
}
@media (min-width: 390px) {
#hpb_cssonly {
padding-top: 104px;
}
}
@media (min-width: 548px) {
#hpb_cssonly {
padding-top: 83px;
}
}
@media (min-width: 1049px) {
#hpb_cssonly {
padding-top: 62px;
}
}

body {
    color: #000000;
    color: #444444;
    font-family: "Helvetica Neue", Arial, sans-serif;
    font-size: 12px;
    margin: 0;
    padding: 0;
    text-align: center;
}/*
* {
border: 0 none;
margin: 0;
padding: 0;
}*/
a {
    color: #888888;
    text-decoration: none;
}
a:active, a:focus {
    overflow: hidden;
}
a:hover {
    color: #666666;
    cursor: pointer;
    text-decoration: none;
}
a:visited {
    text-decoration: none;
}
table {
    display: none;
}
ul {
    list-style: none;
    overflow: hidden;
    margin: 0;
    padding: 0;
}
p {
    margin: 0;
    padding: 0;
}
.header-main, .body-main, .footer-main {
    /*border: 1px solid #000;*/
    position: relative;
    margin-right: auto;
    margin-left: auto;
    text-align: left;
    width: 960px;
    /*height: 100%;*/
}
.header-wrap, .body-wrap, .footer-wrap {
    /*border: 1px solid #000;*/
    position: relative;
    width: 940px;
    top: 0px;
    left: 10px;
    /*height: 100%;*/
}
.main {
    background: transparent url("images/body-bg-squares.png") repeat 0 0;
}
.wrap {
    background: transparent url("images/body-bg-mesh.png") repeat 0 0;
}
.bgcolor {
    position: relative;
    min-width: 960px;
    width: 100%;
}
/* CAN BE REMOVED */
.header {
    /*position: relative;*/
    /*height: 50px;*/
}
.header a {
    color: #ffffff;
}
.header a:hover {
    color: #666666;
}
.header, .header-main {
}
.header-wrap {
    /*height: 100%;*/
    text-align: center;
}
.header a.top {
    float: left;
    display: block;
    overflow: hidden;
    height: 0;
    width: 0;
}
.header .logo {
    background: transparent url("images/logo-dp-header.png") repeat 0 0;
    height: 34px;
    margin-top: 8px;
    margin-bottom: 8px;
    position: absolute;
    width: 160px;
    left: 0;
    top: 0;
}
.menu {
    margin-right: auto;
    margin-left: auto;
    text-align: center;
    width: 600px;
}
.menu, .languages {
    padding-top: 18px;
    height: 15px;
    padding-bottom: 17px;
}
.menu li, .languages li {
    display: inline;
    text-transform: uppercase;
}
.menu li {
    font-weight: bold;
    padding-right: 20px;
    padding-left: 20px;
}
.languages li {
    padding-left: 15px;
}
.languages {
    position: absolute;
    text-align: right;
    width: 160px;
    right: 0;
    top: 0;
}
.languages a {
    padding-left: 30px;
}
.languages a.flag-en {
    background: transparent url("images/flag-en.png") no-repeat 0 0;
}
.languages a.flag-es {
    background: transparent url("images/flag-es.png") no-repeat 0 0;
}
/* CAN BE REMOVED */
.body {
    /*position: relative;*/
}/*
.about .body {
    height: 919px;
}
.resume .body {
    height: 1124px;
}
.es .resume .body {
    height: 1158px;
}
.workbook .body {
    height: 3905px;
}
.es .workbook .body {
    height: 3939px;
}*/
.body-main {
    /*height: 100%;*/
    margin-bottom: 44px;
}
.body-wrap {/*
    padding-top: 30px;
    padding-right: 10px;
    padding-bottom: 0px;
    padding-left: 10px;*/
    /*top: 30px;*/
    /*height: 100%;*/
}
.body-title {
    color: #161616;
    font-size: 28px;
    font-weight: bold;
    /*margin-bottom: 30px;*/
    padding-top: 30px;
    /*height: 64px;*/
    height: 32px;
}
.section {
    /*margin-bottom: 44px;*/
    margin-top: 44px;
    /*padding-bottom: 20px;*/
    border: 1px solid #afafaf;
    background-color: #fbfbfb;
    width: 938px;
    /*float: left;*/
}
.about .section {
    /*min-height: 778px;*/
}
.section .left, .section .right {
    margin-top: 30px;
    margin-right: 30px;
    margin-bottom: 20px;
    margin-left: 30px;
    position: relative;
    width: 878px;
    /*float: left;*/
    min-height: 259px;
}
.about .section .left, .about .section .right {
    min-height: 728px;
}
.section .thumb {
    /*min-height: 222px;*/
}
.about .section .thumb {
    /*min-height: 691px;*/
}
.section .title {
    font-size: 19px;
    font-weight: bold;
    border-bottom: 1px solid #cccccc;
    margin-bottom: 14px;
    height: 23px;
}
.section .right .title {
    text-align: right;
}
.section .thumb, .section .thumb .img {
    width: 520px;
}
.section .left .thumb {
    margin-right: 15px;
    float: left;
}
.section .right .thumb {
    margin-left: 15px;
    float: right;
}
.section .thumb .img {
    background: transparent url("images/workbook/thumbs/thumb-bg.png") no-repeat 0 0;
    position: relative;
    margin-bottom: 6px;
    height: 180px;
}
.section .thumb .img a {
    display: block;
    height: 155px;
    width: 490px;
    position: absolute;
    top: 15px;
    left: 13px;
}
.zealcare .thumb .img {
    background-image: url("images/workbook/thumbs/ZealCare.png");
}
.pcodr .thumb .img {
    background-image: url("images/workbook/thumbs/pCODRCancerView.png");
}
.smucker .thumb .img {
    background-image: url("images/workbook/thumbs/SmuckerSupplier.png");
}
.ihgmerlin .thumb .img {
    background-image: url("images/workbook/thumbs/IHGMerlin.png");
}
.ybo .thumb .img {
    background-image: url("images/workbook/thumbs/YourBreastOptions.png");
}
.apus .thumb .img {
    background-image: url("images/workbook/thumbs/APUSPilotProgram1.png");
}
.butla .thumb .img {
    background-image: url("images/workbook/thumbs/BUTLA.jpg");
}
.pearson .thumb .img {
    background-image: url("images/workbook/thumbs/Pearson.png");
}
.rbxcl .thumb .img {
    background-image: url("images/workbook/thumbs/RBXCommonLibrary.jpg");
}
.cengage .thumb .img {
    background-image: url("images/workbook/thumbs/CengageOfficeTraining.jpg");
}
.navsat .thumb .img {
    background-image: url("images/workbook/thumbs/NavSatEzTrack2.png");
}
.about .section .thumb, .about .section .thumb .img {
    width: 440px;
}
.about .section .thumb .img {
    background: transparent url("images/about/rightfootprint.jpg") no-repeat 0 0;
    height: 649px;
}
.section .thumb .legend {
    font-style: italic;
    margin-bottom: 6px;
    min-height: 30px;
}
.section .content {
    padding-bottom: 25px;
}
.section .content {
    font-size: 14px;
}
.section .content p {
    margin-bottom: 10px;
}
.workbook .section .left .content {
    text-align: right;
}
.workbook .section .right .content {
    text-align: left;
}
.section .back-to {
    height: 15px;
    margin-top: 14px;
    margin-bottom: 6px;
    position: absolute;
    bottom: 0;
}
.section .left .back-to {
    text-align: right;
    right: 0;
}
.section .right .back-to {
    text-align: left;
    left: 0;
}
.section .back-to .top {
    background: transparent url("images/arrow-up.png") no-repeat right 2px;
    padding-right: 18px;
}
.footer {
    background: #343434 url("images/footer-bg-dots.png") repeat 0 0;
    color: #e9e9e9;
    font-size: 14px;
    position: relative;
    bottom: -30px;
    /*height: 275px;
    height: 246px;*/
}/*
.about .footer {
    top: 919px;
    top: 1059px;
}
.resume .footer {
    top: 1124px;
    top: 1264px;
}
.es .resume .footer {
    top: 1158px;
    top: 1298px;
}
.workbook .footer {
    top: 3905px;
    top: 4045px;
}
.es .workbook .footer {
    top: 3939px;
    top: 4079px;
}*/
.footer, .footer-main {
    /*height: 275px;*/
}
.footer-main {
    /*background-color: #00f;*/
}
.footer-wrap {
    /*padding-top: 40px;*/
    /*margin-bottom: 40px;*/
    text-align: center;
    /*height: 235px;*/
	/*background-color: #fedf7e;*/
}
.footer .logo-col {
    text-align: left;
    width: 300px;
    float: left;
    position: absolute;
    left: 0;
    top: 0;
    /*bottom: 130px;*/
    margin-top: 27px;
    /*height: 119px;
    margin-bottom: 100px;*/
    height: 179px;
    margin-bottom: 70px;
    /*background-color: #343434;*/
    /*padding-top: 27px;
    height: 248px;*/
}
.footer .logo {
    background: transparent url("images/logo-dp-footer.png") repeat 0 0;
    margin-bottom: 18px;
    height: 50px;
    width: 233px;
}
.footer .title {
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 14px;
}
.site-nav {
    margin-right: auto;
    margin-left: auto;
    text-align: left;
    width: 110px;
    /*padding-top: 40px;
    height: 275px;*/
}
.site-nav .title {
    /*padding-top: 40px;*/
}
.site-nav, .contact-col {
    padding-top: 40px;
    height: 166px;
    padding-bottom: 70px;
}
.site-nav ul {
    margin-bottom: 18px;
}
.site-nav li {
    padding-top: 4px;
    padding-bottom: 3px;
    width: 100%;
    float: left;
}
.html5-logo {
    background: transparent url("images/logo-html5.png") no-repeat 0 0;
    display: block;
    height: 29px;
    width: 110px;
    position: absolute;
    bottom: 0px;
}
.contact-col {
    text-align: right;
    width: 300px;
    float: right;
    position: absolute;
    right: 0;
    top: 0;
    /*bottom: 69px;*/
    /*padding-top: 40px;
    height: 235px;*/
}
.contact-col ul {
    margin-bottom: 10px;
    float: right;
}
.contact-col li {
    display: inline;
    float: left;
}

.logo-msn, .logo-facebook, .logo-gmail, .logo-gplus, .logo-youtube, .logo-linkedin, .logo-twitter, .logo-skype {
    margin-right: 8px;
    display: block;
    height: 32px;
    width: 32px;
    float: left;
}

.logo-msn {
    background: transparent url("images/logo-msn-1.png") no-repeat 0 0;
}
.logo-facebook {
    background: transparent url("images/logo-facebook.png") no-repeat 0 0;
}
.logo-gmail {
    background: transparent url("images/logo-gmail-1.png") no-repeat 0 0;
}
.logo-gplus {
    background: transparent url("images/logo-gplus.png") no-repeat 0 0;
}
.logo-youtube {
    background: transparent url("images/logo-youtube-1.png") no-repeat 0 0;
}

.logo-linkedin {
    background: transparent url("images/logo-linkedin.png") no-repeat 0 0;
}
.logo-twitter {
    background: transparent url("images/logo-twitter.png") no-repeat 0 0;
}
.logo-skype {
    background: transparent url("images/logo-skype-1.png") no-repeat 0 0;
}

li.mailto, li.callto {
    padding-top: 8px;
}
.en li.mailto, .en li.callto {
    width: 80px;
}
.es li.mailto, .es li.callto {
    width: 100px;
}

